Code cleanup. Small refactorings to improve readability, eliminate potential bugs, etc. Mostly highlighted by IntelliJ.
git-svn-id: https://cruisecontrol.svn.sourceforge.net/svnroot/cruisecontrol/trunk/cruisecontrol@2500 878de816-9c12-0410-b5fe-b34e1928e20d